# electron

./: BUILD.gn  filenames.auto.gni  filenames.gni  package-lock.json  package.json
atom/browser/: native_window.cc  native_window.h  native_window_observer.h  native_window_views.cc  native_window_views.h  native_window_views_win.cc
atom/browser/api/: atom_api_web_contents.cc  atom_api_web_contents.h  atom_api_window.cc
atom/browser/osr/: osr_host_display_client.cc  osr_host_display_client.h  osr_host_display_client_mac.mm  osr_render_widget_host_view.cc  osr_render_widget_host_view.h  osr_view_proxy.cc  osr_view_proxy.h  osr_web_contents_view.cc  osr_web_contents_view.h
atom/browser/ui/: autofill_popup.cc  autofill_popup.h
atom/browser/ui/views/: autofill_popup_view.cc  autofill_popup_view.h  frameless_view.cc
lib/browser/api/: module-list.ts  offscreen-host-view.js  offscreen-window.js  top-level-window.js
native_api/: BUILD.gn  electron.h  offscreen.cc  offscreen.h
native_api/GLES2/: BUILD.gn  gl2.cc
native_api/egl/: BUILD.gn  config.cc  config.h  context.cc  context.h  display.cc  display.h  egl.cc  ns_window_bridge.h  ns_window_bridge.mm  overlay_surface.cc  overlay_surface.h  surface.cc  surface.h  surface_mac.mm  thread_state.cc  thread_state.h
patches/: rw_targeter_191002.diff  rwh_impl_191002.diff  thirdparty_angle_build.diff
patches/chromium/: .patches  command_buffer_demo.patch  fix_metal_compilation_error.patch  hardware_accelerated_offscreen_rendering.patch  hardware_accelerated_offscreen_rendering_mac.patch
patches/common/: config.json
patches/common/angle/: .patches  build_gn_no-unused-command-line-argument.patch
shell/app/: electron_main_delegate.cc
shell/browser/: common_web_contents_delegate.cc  common_web_contents_delegate.h  electron_browser_client.cc
shell/browser/api/: electron_api_offscreen_window.cc  electron_api_offscreen_window.h  electron_api_osr_host_view.cc  electron_api_osr_host_view.h  electron_api_top_level_window.h  electron_api_web_contents.cc  electron_api_web_contents.h  electron_api_web_contents_view.cc  electron_api_web_contents_view.h
shell/browser/osr/: osr_host_display_client.cc  osr_host_display_client.h  osr_host_display_client_mac.mm  osr_render_widget_host_view.cc  osr_render_widget_host_view.h  osr_web_contents_view.cc  osr_web_contents_view.h
shell/common/: node_bindings.cc
shell/common/native_mate_converters/: blink_converter.cc
spec/: api-browser-window-spec.js
